--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                         <x href="#">Digital Blue Foam</x> and also pursuing a Bachelors degree focusing on architecture in India. 
                         My main research interest lies in synthesizing artificial intelligence and architectural design, with my work focusing on 
                         data-driven design workflows in both urban and architectural scales. I have been working with computational design, 
-                        machine learning, deep learning, data science, synthetic data generation to design better and sustainable future cities. 
-                        I, along with the R&D team at DBF, have research papers & abstracts published prestigious global conferences like 
+                        machine learning, deep learning, data science, and synthetic data generation to design better and more sustainable future cities. 
+                        I, along with the R&D team at DBF, have research papers & abstracts published in prestigious global conferences like 
                         <x href="https://caadria2022.org/">CAADRIA</x>, <x href="https://design-modelling-symposium.de/">Design Modelling Symposium (DMS)</x>, and <x href="https://sites.google.com/view/dcc22/?pli=1">Design Computing and Cognition (DCC)</x>. 
                         I have also co-led technical workshops at conferences like, CAADRIA and <x href="#">DigitalFutures</x>. 
-                        I am accredited LEED Green Associate and Kaggle Expert.</p>
+                        I am an accredited LEED Green Associate and Kaggle Expert.</p>
                     
                 
                 </div>
@@ -93,7 +93,7 @@
                         <img src="assets/img/semanticAI.jpg" alt="">
                         <div class="work__text">Semantic AI for Urban Design</div>
                     </a>
-                    <a href="pages/proj4.html" class="work__img">
+                    <a href="pages/proj3.html" class="work__img">
                         <img src="assets/img/cfd.jpg" alt="">
                         <div class="work__text">ML for CFD</div>
                     </a>
@@ -203,7 +203,7 @@
         <section class="pubs section" id="CV">
             <h2 class="section-title">Curriculum vitae</h2>
             <div class="pubs__container bd-grid">
-            <h3><a href="https://aiaec2022.exordo.com/programme/presentation/42">Click here to download <b>CV (pdf)</b></a></h3>
+            <h3><a href="assets/cv/Rutvik-Deshpande_cv.pdf" target="_blank">Click here to download <b>CV (pdf)</b></a></h3>
         </div></section>
         <!--===== FOOTER =====-->
         <footer class="footer">
