--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                 </ol>
                 <h3>Accepted Abstracts</h3>
                 <ol type="1">
-              <li class="pub__name">R. Deshpande, S. V. Patel, C. Wei, M. Nisztuk, M. Corcuera, and Q. Zhu, Generative Pre-Trained Transformers for 15-Minute City Design, <i>CAADRIA’23</i> (to appear)</li>
-              <li class="pub__name">D. R. Subramanian, M. Nisztuk, S. V. Patel, and R. Deshpande, Machine Creation for Architectural Design, <i>Design Computing and Cognition’22.</i></li>
-              <li class="pub__name">Nisztuk, M., Deshpande, D. R. Subramanian, R., Chavan, T., Weijenberg, C., Patel, S.V., Synthetic Machine Learning for Real-Time 3D CFD Prediction, <i>Design Modelling Symposium'22.</i> (<a href="https://www.researchgate.net/publication/365664646_Synthetic_Machine_Learning_for_Real-Time_3D_CFD_Analysis">link</a>)</li>
+                <li class="pub__name">Deshpande, R., Patel, S., Weijenberg, C., Nisztuk, M., Corcuera, M., and Zhu, M., 2023, Generative Pre-Trained Transformers for 15-Minute City Design, <i>CAADRIA’23</i> (to appear)</li>
+              <li class="pub__name">Nisztuk, M., Subramanian, R., Fathis, Z., Deshpande, R., Chavan, T., Weijenberg, C., Patel, S., 2023, Synthetic Machine Learning for Real-Time 3D CFD Prediction., <i>Design Modelling Symposium'22.</i> (<a href="https://www.researchgate.net/publication/366849262_Abstract_Synthetic_Machine_Learning_for_Real-Time_3D_CFD_Prediction">link</a>)</li>
+               <li class="pub__name">Subramanian, R., Nisztuk, M., Patel, S., and Deshpande, R., 2022, Machine Creation for Architectural Design, <i>Design Computing and Cognition’22.</i></li>
             </ol>
             </div>
     
