--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         machine learning, deep learning, data science, and synthetic data generation to design better and more sustainable future cities. 
                         I, along with the R&D team at DBF, have research papers & abstracts published in prestigious global conferences like 
                         <x href="https://caadria2022.org/">CAADRIA</x>, <x href="https://design-modelling-symposium.de/">Design Modelling Symposium (DMS)</x>, and <x href="https://sites.google.com/view/dcc22/?pli=1">Design Computing and Cognition (DCC)</x>. 
-                        I have also co-led technical workshops at conferences like, CAADRIA and <x href="#">DigitalFutures</x>. 
+                        In 2023, I was awarded the prestigious "Young CAADRIA Award" for excellence in research and academics. I have also co-led technical workshops at conferences like, CAADRIA and <x href="#">DigitalFutures</x>. 
                         I am an accredited LEED Green Associate and Kaggle Expert.</p>
                     
                 
@@ -169,12 +169,12 @@
                 <div class="pubs__container bd-grid">
                     <h3>Peer reviewed Conference Papers</h3>
                     <ol type="1">
-                  <li class="pub__name">Deshpande, R., Nisztuk, M., Cheng, C., Subramanian, R., Chavan, T., Weijenberg, C., Patel, S.V., 2022. Synthetic Machine Learning for Real-time Architectural Daylighting Prediction, <i>CAADRIA 2022: Post-Carbon</i> <a href="https://doi.org/10.52842/conf.caadria.2022.1.313">https://doi.org/10.52842/conf.caadria.2022.1.313</a></li>
-                  <li class="pub__name">Cheng, C., Li, Y., Deshpande, R., Antonio, R., Chavan, T., Nisztuk, M., Subramanian, R., Weijenberg, C., Patel, S.V., 2022. Realtime Urban Insights for Bottom-up 15-minute City Design, <i>CAADRIA 2022: Post-Carbon</i> <a href="https://doi.org/10.52842/conf.caadria.2022.1.435">https://doi.org/10.52842/conf.caadria.2022.1.435</a></li>
+                        <li class="pub__name">Deshpande, R., Patel, S., Weijenberg, C., Nisztuk, M., Corcuera, M., Luo, J., Zhu, M., 2023, Generative Pre-Trained Transformers for 15-Minute City Design, <i>CAADRIA 2023: Human-Centric</i> <a href="https://drive.google.com/file/d/1vSQZVuDOdhlj81KuNVga1bI6-Wt2JG8v/view">Pre-Print Papers</a></li>
+                  <li class="pub__name">Deshpande, R., Nisztuk, M., Cheng, C., Subramanian, R., Chavan, T., Weijenberg, C., Patel, S.V., 2022, Synthetic Machine Learning for Real-time Architectural Daylighting Prediction, <i>CAADRIA 2022: Post-Carbon</i> <a href="https://doi.org/10.52842/conf.caadria.2022.1.313">https://doi.org/10.52842/conf.caadria.2022.1.313</a></li>
+                  <li class="pub__name">Cheng, C., Li, Y., Deshpande, R., Antonio, R., Chavan, T., Nisztuk, M., Subramanian, R., Weijenberg, C., Patel, S.V., 2022, Realtime Urban Insights for Bottom-up 15-minute City Design, <i>CAADRIA 2022: Post-Carbon</i> <a href="https://doi.org/10.52842/conf.caadria.2022.1.435">https://doi.org/10.52842/conf.caadria.2022.1.435</a></li>
                 </ol>
                 <h3>Accepted Abstracts</h3>
                 <ol type="1">
-                <li class="pub__name">Deshpande, R., Patel, S., Weijenberg, C., Nisztuk, M., Corcuera, M., and Zhu, M., 2023, Generative Pre-Trained Transformers for 15-Minute City Design, <i>CAADRIA’23</i> (to appear)</li>
               <li class="pub__name">Nisztuk, M., Subramanian, R., Fathis, Z., Deshpande, R., Chavan, T., Weijenberg, C., Patel, S., 2023, Synthetic Machine Learning for Real-Time 3D CFD Prediction., <i>Design Modelling Symposium'22.</i> (<a href="https://www.researchgate.net/publication/366849262_Abstract_Synthetic_Machine_Learning_for_Real-Time_3D_CFD_Prediction">link</a>)</li>
                <li class="pub__name">Subramanian, R., Nisztuk, M., Patel, S., and Deshpande, R., 2022, Machine Creation for Architectural Design, <i>Design Computing and Cognition’22.</i></li>
             </ol>
