--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         My main research interest lies in synthesizing artificial intelligence and architectural design, with my work focusing on 
                         data-driven design workflows in both urban and architectural scales. I have been working with computational design, 
                         machine learning, deep learning, data science, and synthetic data generation to design better and more sustainable future cities. 
-                        I, along with the R&D team at DBF, have research papers & abstracts published in prestigious global conferences like 
+                        I, along with the R&D team at DBF, have research papers & abstracts published in global conferences like 
                         <x href="https://caadria2022.org/">CAADRIA</x>, <x href="https://design-modelling-symposium.de/">Design Modelling Symposium (DMS)</x>, and <x href="https://sites.google.com/view/dcc22/?pli=1">Design Computing and Cognition (DCC)</x>. 
                         In 2023, I was awarded the prestigious "Young CAADRIA Award" for excellence in research and academics. I have also co-led technical workshops at conferences like, CAADRIA and <x href="#">DigitalFutures</x>. 
                         I am an accredited LEED Green Associate and Kaggle Expert.</p>
