--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <h1 class="home__title">Sustainable Design<br>& Technology<br></h1>
 
                     
-                    <p class="about__text">I am a 23 year-old Researcher at MIT Urban Risk Lab and also pursuing a Bachelors degree focusing on architecture in India. 
+                    <p class="about__text">I am a Researcher at MIT Urban Risk Lab and also pursuing a Bachelors degree focusing on architecture in India. 
                     My main research interest lies in synthesizing technology and design, with my work focusing on data-driven design workflows in both urban and 
                     architectural scales. 
 
